--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="Lbhnl5X9hI6Aj87vbjN6UTTv-njhmwbX9f0Z9Glqk1I" />
     <title>Прозрачный фон и белый блок</title>
     <link rel="icon" href="Globus.png" type="image/x-icon">
     <style>
