--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h1>Welcome to Global Globus!</h1> <img src="Globus.png" alt="Описание изображения" width="112" height="112">
 
         <h2>You can download here our projects!</h2>
-        <a href="https://drive.google.com/file/d/1PKvVRjX5MCpG08HAgQJrUTWi49sBz73l/view?usp=sharing" download style="color: blue;">Download the Easy Browser</a>
+        <a href="EasyBrowserInstaller.exe" download style="color: blue;">Download the Easy Browser</a>
         
         
         <a href="Easy-Coder.rar" download style="color: blue;">Or download the Easy Coder</a>
