--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         
         <a href="Easy-Notes-installer.exe" download style="color: blue;">Or download Easy Notes</a>
         <h2>Tushka (In development)</h2>
-        <a href="tushka.zip" download style="color: blue;">Tushka - messenger for everyone!</a>
+        <a href="Tushka.zip" download style="color: blue;">Tushka - messenger for everyone!</a>
     </div>
 </body>
 </html>
