--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Прозрачный фон и белый блок</title>
+    <title>Global Globus</title>
     <link rel="icon" href="Globus.png" type="image/x-icon">
     <style>
         body {
